MDEV-39619: Compute FULL JOIN nest tables recursively

compute_full_join_nest_tables built the bitmap of tables that must
stay adjacent in the join order by iterating leaf_tables and OR'ing in
each enclosing nest's direct_children_map.  That missed FULL JOIN
tables that are themselves a nest of inner joins.  With those tables
missing from full_join_nest_tables, the adjacency restriction in
get_allowed_nj_tables let the optimizer descend into an inner nest
whose remaining tables depended on a table outside it, triggering the
found_tables>0 assertion in best_extension_by_limited_search.

Replace the leaf walk with a recursive walk over top_join_list.  For
every TABLE_LIST flagged JOIN_TYPE_FULL, OR in its
nested_join->used_tables (for a nest) or table->map (for a base
table), and recurse into every nested_join so a FULL JOIN table that
is itself a nest contributes all of its leaf tables.